--- a/WebUIBlazor/Pages/Connection.razor
+++ b/WebUIBlazor/Pages/Connection.razor
@@ -2,7 +2,7 @@
 @page "/"
 @using MachineControlHub.PrinterConnection
 @inject Data.ConnectionServiceSerial serial
-@inject Data.PrinterData printer
+@inject Data.PrinterDataService printer
 
 <PageTitle>Serial Connection</PageTitle>
 <div class="center-div">
