--- a/WebUIBlazor/Pages/Print.razor
+++ b/WebUIBlazor/Pages/Print.razor
@@ -5,7 +5,7 @@
 @using MachineControlHub.Motion;
 @using MachineControlHub.Print;
 <div class="center-div">
-<h5 style="color: @(serial.isConnected == "Connected" ? "green" : "red")">@serial.isConnected</h5>
+<h5 styPrinterDataService@(serial.isConnected == "Connected" ? "green" : "red")">@serial.isConnected</h5>
 
 <h1>Print</h1>
 
