--- a/WebUIBlazor/Pages/Temperature.razor
+++ b/WebUIBlazor/Pages/Temperature.razor
@@ -2,7 +2,7 @@
 @using MachineControlHub.Temps
 @using MachineControlHub.Motion
 @inject Data.ConnectionServiceSerial serial
-@inject Data.PrinterData printerData
+@inject Data.PrinterDataService printerData
 @inject Data.HotendTemperatureService hotend
 @inject Data.BedTemperatureService bed
 @implements IDisposable
